--- a/AI AGENT(with brownies).ipynb
+++ b/AI AGENT(with brownies).ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-03-05T17:34:02.792867Z",
-     "start_time": "2025-03-05T17:34:02.076509Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import os\n",
@@ -34,15 +30,10 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 33
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T17:34:05.863199Z",
-     "start_time": "2025-03-05T17:34:05.790778Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "#To load pdf files\n",
@@ -59,24 +50,11 @@
     "print(f\"Loaded {len(raw_docs)} PDF documents from {pdf_folder_path}\")\n"
    ],
    "id": "673643695aa5629f",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 3 PDF documents from ./Data/RagFiles\n"
-     ]
-    }
-   ],
-   "execution_count": 34
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T17:34:07.685887Z",
-     "start_time": "2025-03-05T17:34:07.680880Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "splitter = RecursiveCharacterTextSplitter(\n",
@@ -87,16 +65,8 @@
     "print(f\"After splitting, we have {len(docs)} chunks total.\")\n"
    ],
    "id": "1cc06a4f6a8efcc3",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After splitting, we have 8 chunks total.\n"
-     ]
-    }
-   ],
-   "execution_count": 35
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -123,12 +93,7 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T17:34:10.278759Z",
-     "start_time": "2025-03-05T17:34:10.252488Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "@tool\n",
@@ -308,15 +273,10 @@
    ],
    "id": "b9f20714adc8b480",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T17:47:12.904899Z",
-     "start_time": "2025-03-05T17:47:12.898599Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "memory = ConversationSummaryMemory(\n",
@@ -375,18 +335,18 @@
    ],
    "id": "8293e4bbaee0c825",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T17:53:00.306438Z",
-     "start_time": "2025-03-05T17:52:55.902746Z"
+     "end_time": "2025-03-05T18:06:27.498400Z",
+     "start_time": "2025-03-05T18:06:24.731021Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "response = agent_executor.invoke({\"user_input\": \"can you do  1.346 to the power 7.289\"})\n",
+    "response = agent_executor.invoke({\"user_input\": \"How ya doin cutie?\"})\n",
     "print(response)"
    ],
    "id": "8a42496d705095c5",
@@ -398,19 +358,16 @@
       "\n",
       "\n",
       "\u001B[1m> Entering new AgentExecutor chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3mThoughts: The user asked to raise 1.346 to the power 7.289. I need to find a way to perform this operation.\n",
+      "\u001B[32;1m\u001B[1;3mThoughts: The question is informal and doesn't require any specific action or tool usage.\n",
       "\n",
-      "Action: power\n",
-      "Action Input: 1.346, 7.289\u001B[0m\u001B[33;1m\u001B[1;3m8.721866632573068\u001B[0m\u001B[32;1m\u001B[1;3mThoughts: The operation was performed successfully. I will now provide the result of the power operation.\n",
-      "\n",
-      "Final Answer: 8.722\u001B[0m\n",
+      "Final Answer: Not much, just hanging out.\u001B[0m\n",
       "\n",
       "\u001B[1m> Finished chain.\u001B[0m\n",
-      "{'user_input': 'can you do  1.346 to the power 7.289', 'history': 'Current summary: \\nThe human asks the AI to do addition between 1.346 and 7.289, to which the AI responds with the result of 8.635.\\n\\nNew lines of conversation:\\nHuman: can you do multiplication between 1.346 and 7.289\\nAI: 9.810994\\n\\nNew summary: \\nThe human asks the AI to perform mathematical operations, starting with addition between 1.346 and 7.289, resulting in 8.635, and then proceeds to ask for multiplication between the same numbers, receiving a result of 9.810994.', 'output': '8.722', 'intermediate_steps': [(AgentAction(tool='power', tool_input='1.346, 7.289', log='Thoughts: The user asked to raise 1.346 to the power 7.289. I need to find a way to perform this operation.\\n\\nAction: power\\nAction Input: 1.346, 7.289'), '8.721866632573068')]}\n"
+      "{'user_input': 'How ya doin cutie?', 'history': 'Current summary: \\nThe human asks the AI to perform mathematical operations, starting with addition between 1.346 and 7.289, resulting in 8.635, and then proceeds to ask for multiplication between the same numbers, receiving a result of 9.810994.\\n\\nNew lines of conversation:\\nHuman: can you do  1.346 to the power 7.289\\nAI: 8.722\\n\\nNew summary: \\nThe human asks the AI to perform mathematical operations, starting with addition between 1.346 and 7.289, resulting in 8.635, then proceeds to ask for multiplication between the same numbers, receiving a result of 9.810994, and finally asks for exponentiation, where 1.346 is raised to the power of 7.289, resulting in 8.722.', 'output': 'Not much, just hanging out.', 'intermediate_steps': []}\n"
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 52
   },
   {
    "metadata": {},
