--- a/CIFAR-10(with brownies).ipynb
+++ b/CIFAR-10(with brownies).ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-03-05T15:03:12.744429Z",
-     "start_time": "2025-03-05T15:02:56.893997Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import os\n",
@@ -28,16 +24,8 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cuda\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -244,8 +232,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-04T17:12:02.400840Z",
-     "start_time": "2025-03-04T17:10:59.823167Z"
+     "end_time": "2025-03-05T18:05:52.526731Z",
+     "start_time": "2025-03-05T18:05:04.274590Z"
     }
    },
    "cell_type": "code",
@@ -282,21 +270,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 87.51%\n",
-      "Precision: 0.877, Recall: 0.875, F1-score: 0.875\n",
+      "Validation Accuracy: 88.00%\n",
+      "Precision: 0.882, Recall: 0.880, F1-score: 0.879\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    airplane       0.85      0.92      0.88      1000\n",
-      "  automobile       0.95      0.93      0.94      1000\n",
-      "        bird       0.88      0.80      0.84      1000\n",
-      "         cat       0.74      0.80      0.77      1000\n",
-      "        deer       0.85      0.84      0.85      1000\n",
-      "         dog       0.83      0.82      0.83      1000\n",
-      "        frog       0.89      0.91      0.90      1000\n",
-      "       horse       0.91      0.86      0.89      1000\n",
-      "        ship       0.94      0.91      0.93      1000\n",
+      "    airplane       0.85      0.94      0.89      1000\n",
+      "  automobile       0.97      0.93      0.95      1000\n",
+      "        bird       0.89      0.82      0.86      1000\n",
+      "         cat       0.82      0.68      0.74      1000\n",
+      "        deer       0.87      0.86      0.87      1000\n",
+      "         dog       0.74      0.88      0.80      1000\n",
+      "        frog       0.92      0.92      0.92      1000\n",
+      "       horse       0.91      0.90      0.90      1000\n",
+      "        ship       0.94      0.93      0.93      1000\n",
       "       truck       0.92      0.95      0.94      1000\n",
       "\n",
       "    accuracy                           0.88     10000\n",
@@ -306,15 +294,15 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 7
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "b25f75b699cd5de3",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "bb024b1efe84290c"
   }
  ],
  "metadata": {
