--- a/CIFAR-10.ipynb
+++ b/CIFAR-10.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-03-05T11:05:03.448069Z",
-     "start_time": "2025-03-05T11:04:51.634909Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import os\n",
@@ -28,24 +24,11 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cuda\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T11:05:08.647048Z",
-     "start_time": "2025-03-05T11:05:08.590661Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "data_dir = \"./Data/train\"\n",
@@ -61,48 +44,22 @@
     "print(f\"Train samples: {len(train_df)}, Validation samples: {len(val_df)}\")\n"
    ],
    "id": "76e6520ff7235fcb",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train samples: 40000, Validation samples: 10000\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T11:05:10.103897Z",
-     "start_time": "2025-03-05T11:05:10.099671Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "image_id = 1009\n",
     "print(f\"Label for image {image_id}: {df.loc[df['id'] == image_id, 'label'].values[0]}\")"
    ],
    "id": "9914a7e57dd2604f",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Label for image 1009: bird\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T11:05:11.064891Z",
-     "start_time": "2025-03-05T11:05:11.057724Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class CIFARDataset(Dataset):\n",
@@ -143,24 +100,11 @@
     "print(\"Ready!\")\n"
    ],
    "id": "ac08b47e5d2b01ba",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ready!\n"
-     ]
-    }
-   ],
-   "execution_count": 5
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T11:05:12.884108Z",
-     "start_time": "2025-03-05T11:05:12.713850Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class CNNModel(nn.Module):\n",
@@ -210,36 +154,11 @@
     "print(f\"Number of parameters: {total_params}\")"
    ],
    "id": "be84c75a4bcc47d8",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CNNModel(\n",
-      "  (conv1): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "  (bn1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "  (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (conv3): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "  (bn3): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (fc1): Linear(in_features=2048, out_features=256, bias=True)\n",
-      "  (dropout): Dropout(p=0.3, inplace=False)\n",
-      "  (fc2): Linear(in_features=256, out_features=10, bias=True)\n",
-      ")\n",
-      "Number of parameters: 620810\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T11:05:16.473451Z",
-     "start_time": "2025-03-05T11:05:16.469453Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
@@ -255,15 +174,10 @@
    ],
    "id": "c8393ff6e8ae2994",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-04T22:06:55.110183Z",
-     "start_time": "2025-03-04T22:02:06.352671Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "writer = SummaryWriter(log_dir='Logs/no_brownies')\n",
@@ -334,33 +248,14 @@
     "writer.close()"
    ],
    "id": "cfabf410c4170bde",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/15] Train Loss: 1.3273, Train Acc: 51.97% Val Loss: 1.3875, Val Acc: 53.72%\n",
-      "Epoch [2/15] Train Loss: 0.9652, Train Acc: 65.71% Val Loss: 0.8540, Val Acc: 69.63%\n",
-      "Epoch [3/15] Train Loss: 0.8272, Train Acc: 70.81% Val Loss: 0.8480, Val Acc: 69.39%\n",
-      "Epoch [4/15] Train Loss: 0.7423, Train Acc: 73.86% Val Loss: 0.8441, Val Acc: 70.66%\n",
-      "Epoch [5/15] Train Loss: 0.6700, Train Acc: 76.57% Val Loss: 0.7799, Val Acc: 72.26%\n",
-      "Epoch [6/15] Train Loss: 0.6050, Train Acc: 78.92% Val Loss: 0.8041, Val Acc: 72.75%\n",
-      "Epoch [7/15] Train Loss: 0.5424, Train Acc: 80.82% Val Loss: 0.8328, Val Acc: 73.61%\n",
-      "Epoch [8/15] Train Loss: 0.4906, Train Acc: 82.65% Val Loss: 0.6483, Val Acc: 77.29%\n",
-      "Epoch [9/15] Train Loss: 0.4450, Train Acc: 84.10% Val Loss: 0.7087, Val Acc: 76.54%\n",
-      "Epoch [10/15] Train Loss: 0.3983, Train Acc: 85.95% Val Loss: 0.7585, Val Acc: 74.97%\n",
-      "Epoch [11/15] Train Loss: 0.3545, Train Acc: 87.37% Val Loss: 0.7374, Val Acc: 77.03%\n",
-      "Early stopping triggered!\n"
-     ]
-    }
-   ],
-   "execution_count": 27
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T11:05:34.755828Z",
-     "start_time": "2025-03-05T11:05:20.303531Z"
+     "end_time": "2025-03-05T18:05:10.569276Z",
+     "start_time": "2025-03-05T18:05:02.046051Z"
     }
    },
    "cell_type": "code",
@@ -398,37 +293,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 77.29%\n",
-      "Precision: 0.776, Recall: 0.773, F1-score: 0.772\n",
+      "Validation Accuracy: 77.95%\n",
+      "Precision: 0.783, Recall: 0.779, F1-score: 0.778\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    airplane       0.86      0.76      0.80      1000\n",
-      "  automobile       0.90      0.85      0.87      1000\n",
-      "        bird       0.76      0.66      0.71      1000\n",
+      "    airplane       0.80      0.83      0.82      1000\n",
+      "  automobile       0.85      0.91      0.88      1000\n",
+      "        bird       0.80      0.59      0.68      1000\n",
       "         cat       0.60      0.59      0.60      1000\n",
-      "        deer       0.69      0.79      0.74      1000\n",
-      "         dog       0.72      0.64      0.67      1000\n",
+      "        deer       0.71      0.80      0.75      1000\n",
+      "         dog       0.68      0.68      0.68      1000\n",
       "        frog       0.73      0.90      0.81      1000\n",
-      "       horse       0.78      0.83      0.80      1000\n",
-      "        ship       0.85      0.90      0.87      1000\n",
-      "       truck       0.87      0.81      0.84      1000\n",
+      "       horse       0.82      0.81      0.82      1000\n",
+      "        ship       0.93      0.84      0.88      1000\n",
+      "       truck       0.88      0.86      0.87      1000\n",
       "\n",
-      "    accuracy                           0.77     10000\n",
-      "   macro avg       0.78      0.77      0.77     10000\n",
-      "weighted avg       0.78      0.77      0.77     10000\n",
+      "    accuracy                           0.78     10000\n",
+      "   macro avg       0.78      0.78      0.78     10000\n",
+      "weighted avg       0.78      0.78      0.78     10000\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": "",
-   "id": "d90e72288a88a850",
+   "id": "639f30f128aa5b8b",
    "outputs": [],
    "execution_count": null
   }
