--- a/CIFAR-10.ipynb
+++ b/CIFAR-10.ipynb
@@ -7,6 +7,8 @@
     "collapsed": true
    },
    "source": [
+    "#Required libraries\n",
+    "\n",
     "import os\n",
     "import pandas as pd\n",
     "import torch\n",
@@ -20,7 +22,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
     "\n",
-    "#gpu\n",
+    "#checking if its using my gpu or cpu\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n"
    ],
@@ -31,6 +33,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#Splitting the Dataset (Train & Validation Sets)\n",
+    "\n",
     "data_dir = \"./Data/train\"\n",
     "csv_path = \"./Data/trainLabels.csv\"\n",
     "\n",
@@ -39,9 +43,8 @@
     "class_names = sorted(df['label'].unique())\n",
     "class_map = {name: i for i, name in enumerate(class_names)}\n",
     "\n",
-    "\n",
     "train_df, val_df = train_test_split(df, test_size=0.2, stratify=df['label'], random_state=42)\n",
-    "print(f\"Train samples: {len(train_df)}, Validation samples: {len(val_df)}\")\n"
+    "print(f\"Train samples: {len(train_df)}, Validation samples: {len(val_df)}\")  "
    ],
    "id": "76e6520ff7235fcb",
    "outputs": [],
@@ -51,7 +54,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#Checking if the labels are correctly assigned\n",
     "image_id = 1009\n",
+    "\n",
     "print(f\"Label for image {image_id}: {df.loc[df['id'] == image_id, 'label'].values[0]}\")"
    ],
    "id": "9914a7e57dd2604f",
@@ -62,42 +67,44 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#Image pre-processing\n",
+    "\n",
     "class CIFARDataset(Dataset):\n",
     "    def __init__(self, dataframe, data_dir, transform=None):\n",
-    "        self.dataframe = dataframe.reset_index(drop=True)\n",
-    "        self.data_dir = data_dir\n",
-    "        self.transform = transform\n",
+    "        self.dataframe = dataframe.reset_index(drop=True) #reset index incase if its shuffled\n",
+    "        self.data_dir = data_dir #path to where images are stores\n",
+    "        self.transform = transform #transformations to preprocess imgs\n",
     "        \n",
     "    def __len__(self):\n",
-    "        return len(self.dataframe)\n",
+    "        return len(self.dataframe) #returns total number of imgs from the dataset\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        row = self.dataframe.iloc[idx]\n",
-    "        image_id = row['id']\n",
-    "        label_str = row['label']\n",
+    "        row = self.dataframe.iloc[idx] #get a row from the dataframe\n",
+    "        image_id = row['id'] #get image file name\n",
+    "        label_str = row['label'] #get label of the image\n",
     "        \n",
-    "        img_path = os.path.join(self.data_dir, f\"{image_id}.png\")\n",
-    "        image = Image.open(img_path).convert(\"RGB\")\n",
+    "        img_path = os.path.join(self.data_dir, f\"{image_id}.png\") #construct path to img\n",
+    "        image = Image.open(img_path).convert(\"RGB\") #open image and ensure its rgb\n",
     "        \n",
     "        if self.transform:\n",
-    "            image = self.transform(image)\n",
+    "            image = self.transform(image) #apply transformations to image\n",
     "        \n",
-    "        label = class_map[label_str]\n",
-    "        return image, label\n",
+    "        label = class_map[label_str] #convert label to its numerical label\n",
+    "        return image, label #returning the image tensor and its label\n",
     "\n",
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((32, 32)),\n",
-    "    transforms.ToTensor(),\n",
+    "    transforms.Resize((32, 32)), #resize image to 32x32 incase its not\n",
+    "    transforms.ToTensor(), #convert the image to a pytorch tensor\n",
     "])\n",
     "\n",
     "train_dataset = CIFARDataset(train_df, data_dir, transform=transform)\n",
     "val_dataset = CIFARDataset(val_df, data_dir, transform=transform)\n",
     "\n",
-    "batch_size = 64  # tunable\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "batch_size = 128  # tunable\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True) #shuffle helps to generalize the data its training on, also to reduce overfitting\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False) #data is in order no need to shuffle since its a validation set\n",
     "\n",
-    "print(\"Ready!\")\n"
+    "print(\"Ready!\") #just to lmk if it didnt break\n"
    ],
    "id": "ac08b47e5d2b01ba",
    "outputs": [],
@@ -107,23 +114,34 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#CNN model architecture\n",
+    "#Brownies: Got batch normalization here\n",
+    "\n",
+    "\n",
     "class CNNModel(nn.Module):\n",
     "    def __init__(self, num_classes):\n",
     "        super(CNNModel, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
-    "        self.bn1 = nn.BatchNorm2d(32)\n",
-    "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        \n",
+    "        #first convolution layer\n",
+    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1) #3 channels, 32 filters, 3x3 kernels, padding is 1 to prevent image size reduction\n",
+    "        self.bn1 = nn.BatchNorm2d(32) #to normalize the activation, stabilize training.\n",
+    "        self.pool = nn.MaxPool2d(2, 2) #halves the size of the feature maps. Helps with perfomance (also it retains important info so its fine)\n",
+    "        \n",
+    "        #second convolution layer\n",
     "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
     "        self.bn2 = nn.BatchNorm2d(64)\n",
     "        \n",
+    "        #third convolution layer\n",
     "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, padding=1)\n",
     "        self.bn3 = nn.BatchNorm2d(128)\n",
     "        \n",
-    "        self.fc1 = nn.Linear(128 * 4 * 4, 256)\n",
-    "        self.dropout = nn.Dropout(0.3)\n",
-    "        self.fc2 = nn.Linear(256, num_classes)\n",
+    "        #final layer\n",
+    "        self.fc1 = nn.Linear(128 * 4 * 4, 256) #flattens the 2048(128*4*4) inputs to 256 neurons.\n",
+    "        self.dropout = nn.Dropout(0.3) #drops 30% of the neurons at random, also to prevent overfitting.\n",
+    "        self.fc2 = nn.Linear(256, num_classes) #another flatten layer to bring the 256 inputs down to 10 (number of classes of ciphar-10 to correspond to each category of image)\n",
     "        \n",
+    "#flow of the data\n",
+    "    \n",
     "    def forward(self, x):\n",
     "        x = self.conv1(x)\n",
     "        x = self.bn1(x)\n",
@@ -140,18 +158,18 @@
     "        x = F.relu(x)\n",
     "        x = self.pool(x)\n",
     "        \n",
-    "        x = x.view(x.size(0), -1)\n",
+    "        x = x.view(x.size(0), -1) \n",
     "        \n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.dropout(x)\n",
     "        x = self.fc2(x)\n",
     "        return x\n",
     "\n",
-    "num_classes = len(class_names)\n",
+    "num_classes = len(class_names) #number of unique labels \n",
     "model = CNNModel(num_classes).to(device)\n",
-    "print(model)\n",
+    "print(model) #displays the architecture\n",
     "total_params = sum(p.numel() for p in model.parameters())\n",
-    "print(f\"Number of parameters: {total_params}\")"
+    "print(f\"Number of parameters: {total_params}\") #Jst for me to see how many params the model consists of"
    ],
    "id": "be84c75a4bcc47d8",
    "outputs": [],
@@ -161,13 +179,15 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-3) #adam optimizer, super popular. Adapts learning rates for each parameter to improve convergence\n",
+    "criterion = nn.CrossEntropyLoss() #good for categorical data\n",
     "\n",
+    "#early stopping (if you wanna tweak it)\n",
     "patience = 3\n",
     "best_val_loss = float('inf')\n",
     "epochs_no_improve = 0\n",
     "\n",
+    "#Do how much ever you want, im keeping it to just 15. Model starts overfitting around 11 epochs.\n",
     "num_epochs = 15\n",
     "train_losses, val_losses = [], []\n",
     "train_accs, val_accs = [], []"
@@ -180,25 +200,35 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#tensorboard cuz they have a nice UI (also I can compare the VGG model and this one over there)\n",
+    "\n",
     "writer = SummaryWriter(log_dir='Logs/no_brownies')\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
     "    correct, total = 0, 0\n",
     "    \n",
+    "    #loading training data per batch\n",
+    "    \n",
     "    for images, labels in train_loader:\n",
     "        images, labels = images.to(device), labels.to(device)\n",
     "        \n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(images)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "        \n",
+    "        \n",
+    "        optimizer.zero_grad() #clearing gradients\n",
+    "        outputs = model(images) \n",
+    "        loss = criterion(outputs, labels) #computing loss\n",
+    "        loss.backward() #compute the gradients (backpropagation)\n",
+    "        optimizer.step() #updates weights\n",
+    "        \n",
+    "        #tracking loss and accuracy calculations\n",
     "        \n",
     "        running_loss += loss.item() * images.size(0)\n",
     "        _, predicted = torch.max(outputs, 1)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "        total += labels.size(0)\n",
+    "    \n",
+    "    #tracking loss and accuracy calculations\n",
     "    \n",
     "    train_epoch_loss = running_loss / len(train_loader.dataset)\n",
     "    train_epoch_acc = 100.0 * correct / total\n",
@@ -226,6 +256,8 @@
     "    train_accs.append(train_epoch_acc)\n",
     "    val_accs.append(val_epoch_acc)\n",
     "    \n",
+    "    #adding all the data to tensorboard log files.\n",
+    "    \n",
     "    writer.add_scalar('Loss/Train', train_epoch_loss, epoch)\n",
     "    writer.add_scalar('Loss/Val', val_epoch_loss, epoch)\n",
     "    writer.add_scalar('Accuracy/Train', train_epoch_acc, epoch)\n",
@@ -234,6 +266,8 @@
     "    print(f\"Epoch [{epoch+1}/{num_epochs}] \"\n",
     "          f\"Train Loss: {train_epoch_loss:.4f}, Train Acc: {train_epoch_acc:.2f}% \"\n",
     "          f\"Val Loss: {val_epoch_loss:.4f}, Val Acc: {val_epoch_acc:.2f}%\")\n",
+    "    \n",
+    "    #early stopping algorithm\n",
     "    \n",
     "    if val_epoch_loss < best_val_loss:\n",
     "        best_val_loss = val_epoch_loss\n",
@@ -252,14 +286,11 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T18:05:10.569276Z",
-     "start_time": "2025-03-05T18:05:02.046051Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
+    "#Test accuracy for the best model we generated\n",
+    "\n",
     "\n",
     "model.load_state_dict(torch.load(\"best_model.pth\"))\n",
     "model.eval()\n",
@@ -276,6 +307,9 @@
     "        all_preds.extend(predicted.cpu().numpy())\n",
     "        all_labels.extend(labels.cpu().numpy())\n",
     "\n",
+    "#all the data asked for in the question.\n",
+    "\n",
+    "\n",
     "acc = accuracy_score(all_labels, all_preds)\n",
     "prec = precision_score(all_labels, all_preds, average='weighted')\n",
     "rec = recall_score(all_labels, all_preds, average='weighted')\n",
@@ -288,36 +322,8 @@
     "print(classification_report(all_labels, all_preds, target_names=class_names))"
    ],
    "id": "b49b4d93144d591f",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation Accuracy: 77.95%\n",
-      "Precision: 0.783, Recall: 0.779, F1-score: 0.778\n",
-      "\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    airplane       0.80      0.83      0.82      1000\n",
-      "  automobile       0.85      0.91      0.88      1000\n",
-      "        bird       0.80      0.59      0.68      1000\n",
-      "         cat       0.60      0.59      0.60      1000\n",
-      "        deer       0.71      0.80      0.75      1000\n",
-      "         dog       0.68      0.68      0.68      1000\n",
-      "        frog       0.73      0.90      0.81      1000\n",
-      "       horse       0.82      0.81      0.82      1000\n",
-      "        ship       0.93      0.84      0.88      1000\n",
-      "       truck       0.88      0.86      0.87      1000\n",
-      "\n",
-      "    accuracy                           0.78     10000\n",
-      "   macro avg       0.78      0.78      0.78     10000\n",
-      "weighted avg       0.78      0.78      0.78     10000\n",
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 9
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
