--- a/CIFAR-10(with brownies).ipynb
+++ b/CIFAR-10(with brownies).ipynb
@@ -7,6 +7,8 @@
     "collapsed": true
    },
    "source": [
+    "#Importing required libraries\n",
+    "\n",
     "import os\n",
     "import pandas as pd\n",
     "import torch\n",
@@ -20,7 +22,7 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
-    "#gpu\n",
+    "#checking if its using my gpu or cpu\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")"
    ],
@@ -31,6 +33,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#Splitting the Dataset (Train & Validation Sets)\n",
+    "\n",
     "data_dir = \"./Data/train\"\n",
     "csv_path = \"./Data/trainLabels.csv\"\n",
     "\n",
@@ -51,18 +55,23 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#preprocessing images to be compatible with the VGG16 model\n",
+    "\n",
     "train_transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
+    "    transforms.Resize((224, 224)), #makes the size of the image 224x224 (cuz the vgg model has been trained on it)\n",
+    "    \n",
+    "    #Brownies: Data augmentation\n",
+    "    \n",
     "    transforms.RandomHorizontalFlip(p=0.5),\n",
     "    transforms.RandomRotation(degrees=15),\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], #model was trained on the imagenet dataset so these are the mean and std RGB values of the images.\n",
     "                         std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
     "val_transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
+    "    transforms.ToTensor(), #to convert the image to a pyTorch tensor (ie bring it from range 0-255 to 0-1)\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
     "                         std=[0.229, 0.224, 0.225])\n",
     "])\n",
@@ -93,7 +102,7 @@
     "train_dataset = ImageDataset(train_df, data_dir, transform=train_transform)\n",
     "val_dataset = ImageDataset(val_df, data_dir, transform=val_transform)\n",
     "\n",
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)"
    ],
@@ -105,18 +114,18 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "base_model = models.vgg16(weights='IMAGENET1K_V1')\n",
+    "base_model = models.vgg16(weights='IMAGENET1K_V1') #brownie:loading a pretrained model \n",
     "\n",
     "for param in base_model.features[:20].parameters():\n",
-    "    param.requires_grad = False\n",
+    "    param.requires_grad = False #freezing of the first 20 layers in the model which handle feature extraction and don't need to be retrained as they've already been trained on a large dataset and know basic features.\n",
     "\n",
-    "in_features = base_model.classifier[6].in_features\n",
+    "in_features = base_model.classifier[6].in_features #1000 neurons for imagenet FC layer\n",
     "base_model.classifier[6] = nn.Sequential(\n",
     "    nn.Linear(in_features, 512),\n",
     "    nn.BatchNorm1d(512),\n",
     "    nn.ReLU(),\n",
     "    nn.Dropout(0.5),\n",
-    "    nn.Linear(512, len(class_names))\n",
+    "    nn.Linear(512, len(class_names))    \n",
     ")\n",
     "\n",
     "model = base_model.to(device)\n",
@@ -134,6 +143,8 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.classifier.parameters(), lr=1e-3)\n",
     "\n",
+    "#brownie: learning rate scheduler.\n",
+    "#reduces the learning rate when a metric like val_loss starts stagnates instead of improving.\n",
     "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=2, verbose=True)\n",
     "\n",
     "patience = 3\n",
@@ -230,12 +241,7 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T18:05:52.526731Z",
-     "start_time": "2025-03-05T18:05:04.274590Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "model.load_state_dict(torch.load(\"best_brownie_model.pth\"))\n",
@@ -265,44 +271,16 @@
     "print(classification_report(all_labels, all_preds, target_names=class_names))"
    ],
    "id": "bedf7bbb917837ab",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation Accuracy: 88.00%\n",
-      "Precision: 0.882, Recall: 0.880, F1-score: 0.879\n",
-      "\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    airplane       0.85      0.94      0.89      1000\n",
-      "  automobile       0.97      0.93      0.95      1000\n",
-      "        bird       0.89      0.82      0.86      1000\n",
-      "         cat       0.82      0.68      0.74      1000\n",
-      "        deer       0.87      0.86      0.87      1000\n",
-      "         dog       0.74      0.88      0.80      1000\n",
-      "        frog       0.92      0.92      0.92      1000\n",
-      "       horse       0.91      0.90      0.90      1000\n",
-      "        ship       0.94      0.93      0.93      1000\n",
-      "       truck       0.92      0.95      0.94      1000\n",
-      "\n",
-      "    accuracy                           0.88     10000\n",
-      "   macro avg       0.88      0.88      0.88     10000\n",
-      "weighted avg       0.88      0.88      0.88     10000\n",
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 7
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "bb024b1efe84290c"
+   "id": "bb024b1efe84290c",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
