--- a/AI AGENT(with brownies).ipynb
+++ b/AI AGENT(with brownies).ipynb
@@ -4,9 +4,14 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "is_executing": true
+    }
    },
    "source": [
+    "#importing libraries\n",
+    "\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "from langchain_groq import ChatGroq\n",
@@ -25,7 +30,7 @@
     "\n",
     "llm = ChatGroq(\n",
     "    groq_api_key=groq_api_key,\n",
-    "    model_name=\"llama-3.1-8b-instant\",\n",
+    "    model_name=\"llama-3.1-8b-instant\", #can be any other model from groq, i felt this worked best.\n",
     "    temperature=0.7\n",
     ")"
    ],
@@ -57,6 +62,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#Splitting files into chunks to be able to process it better.\n",
+    "\n",
     "splitter = RecursiveCharacterTextSplitter(\n",
     "    chunk_size=1000,\n",
     "    chunk_overlap=200\n",
@@ -72,6 +79,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#Creating embeddings for each chunk using a local transformer model.\n",
+    "\n",
     "class SentenceTransformerEmbeddings:\n",
     "    def __init__(self, model_name='all-MiniLM-L6-v2'):\n",
     "        self.model = SentenceTransformer(model_name)\n",
@@ -85,7 +94,7 @@
     "embedding_func = SentenceTransformerEmbeddings()\n",
     "\n",
     "db = Chroma.from_documents(docs, embedding=embedding_func, persist_directory=\"./chroma_db\")\n",
-    "\n",
+    "#embeddings are then stored in a vectorspace (chromaDB here) for retrieval in a rag pipeline\n",
     "retriever = db.as_retriever(search_type=\"similarity\", search_kwargs={\"k\":3})"
    ],
    "id": "d030100120de4b53",
@@ -96,6 +105,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "#these are all the tools that can be called by the agent.\n",
+    "#this took so much of my time just prompt engineering. (especially the brownies)\n",
+    "\n",
     "@tool\n",
     "def add(input_str: str) -> str:\n",
     "    \"\"\"Add two numbers from a string like 1, 2.\"\"\"\n",
@@ -176,6 +188,9 @@
     "\n",
     "    return results\n",
     "\n",
+    "\n",
+    "#Brownie tools\n",
+    "\n",
     "@tool\n",
     "def summarize_file(query: str) -> str:\n",
     "    \"\"\"\n",
@@ -221,6 +236,11 @@
     "        return final_summary\n",
     "    except Exception as e:\n",
     "        return f\"Error generating final notes: {str(e)}\"\n",
+    "\n",
+    "#A massive file will burn through your API tokens.. but um both of the notes and summary functions work in quite a similar way,\n",
+    "#its just that their output structures would be different.\n",
+    "#both function make notes/summarize each chunk of the file and then put them all together and make notes/summarize that entire combined text.\n",
+    "#hence if u had a large file with loads of chunks it would just rate limit you or eat up all your tokens.\n",
     "    \n",
     "@tool\n",
     "def notes_file(query: str) -> str:\n",
@@ -268,7 +288,8 @@
     "    except Exception as e:\n",
     "        return f\"Error generating final notes: {str(e)}\"\n",
     "\n",
-    "    \n",
+    "#this is the list of tools that will be available to the AI agent.\n",
+    "\n",
     "tools = [add, subtract, multiply, divide, power, modulus, web_search, pdf_rag, summarize_file, notes_file]"
    ],
    "id": "b9f20714adc8b480",
@@ -283,6 +304,9 @@
     "    llm=llm,\n",
     "    output_key=\"output\"\n",
     ")\n",
+    "\n",
+    "#prompt template, also took a long time to make it functional, \n",
+    "#I think it could still be better but not enough time to tweak around with it.\n",
     "\n",
     "prompt_template = PromptTemplate(\n",
     "    template=\"\"\"\n",
